# BatchBPE

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  train.py
batchbpe/: __init__.py  base.py  batch.py  quick.py
tests/: 1GB_of_FineWeb-Edu_10B_sample_freq_cutoff_10.csv  test_tokenizer.py
